RESOLVED FIXED266552
Fix hang in SQLTransactionCoordinator::shutdown()
https://bugs.webkit.org/show_bug.cgi?id=266552
Summary Fix hang in SQLTransactionCoordinator::shutdown()
Ahmad Saleem
Reported 2023-12-17 06:24:36 PST
Hi Team, While going through potential merges from Blink, I came across another potential: Blink Commit: https://src.chromium.org/viewvc/blink?view=revision&revision=181269 WebKit Source: https://searchfox.org/wubkat/rev/9222f67347ee90fcc400687e756ef8c8979748f0/Source/WebCore/Modules/webdatabase/SQLTransactionCoordinator.cpp#132 Here, it should be: RefPtr<SQLTransaction> transaction = info.pendingTransactions.takeFirst(); Current, Chromium / Blink source also has above patch applied: https://source.chromium.org/chromium/chromium/src/+/main:third_party/blink/renderer/modules/webdatabase/sql_transaction_coordinator.cc;l=143;drc=fb656ef1e239adc1ab9960e8d7916a7f6df4409a Just wanted to raise, so we can import this and fix any issue. Thanks!
Attachments
EWS
Comment 1 2023-12-19 17:18:06 PST
Committed 272316@main (4a40fea04d2f): <https://commits.webkit.org/272316@main> Reviewed commits have been landed. Closing PR #22032 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-12-19 17:19:17 PST
Note You need to log in before you can comment on or make changes to this bug.