Cherry-pick 272316@main (4a40fea04d2f). https://bugs.webkit.org/show_bug.cgi?id=266552

Fix hang in SQLTransactionCoordinator::shutdown()

    https://bugs.webkit.org/show_bug.cgi?id=266552

    Reviewed by Chris Dumez.

    Merge: https://src.chromium.org/viewvc/blink?view=revision&revision=181269

    We should call `takeFirst` instead of `first` to decrease the size of
    `info.pendingTransactions`.

    Also update 'RefPtr<SQLTransaction>' to 'RefPtr'.

    This changes does not have any test case.

    * Source/WebCore/Modules/webdatabase/SQLTransactionCoordinator.cpp:
    (SQLTransactionCoordinator::shutdown):

    Canonical link: https://commits.webkit.org/272316@main